Fix caching in DataController (fixes #423)